tcg-salesforce/force-app/main/default/objects/DeckCard__c/DeckCard__c.object-meta.xml
<CustomObject>
    <label>Deck Card</label>
    <nameField>
        <label>Deck Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deck Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>