tcg-salesforce/force-app/main/default/objects/DeckCard__c/fields/Deck__c.field-meta.xml
<CustomField>
    <fullName>Deck__c</fullName>
    <label>Deck</label>
    <referenceTo>Deck__c</referenceTo>
    <relationshipLabel>Deck Cards</relationshipLabel>
    <relationshipName>DeckCards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>