tcg-salesforce/force-app/main/default/objects/DeckCard__c/fields/PlayerCard__c.field-meta.xml
<CustomField>
    <fullName>PlayerCard__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Player card</label>
    <referenceTo>PlayerCard__c</referenceTo>
    <relationshipLabel>Deck Cards</relationshipLabel>
    <relationshipName>DeckCards</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>